[package]
name = "sort"
version = "0.8.5"
description = "sort algorithms"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/WatchDG/rust-sort"
documentation = "https://docs.rs/rust-sort"
repository = "https://github.com/WatchDG/rust-sort"
readme = "README.md"
edition = "2018"

[dev-dependencies]
paste = "1.0.15"
rand = "0.9.0"
